--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -1,27 +1,40 @@
-.modal_wrapper {
-    width: 100%;
-    height: 100%;
-    background-color: #00000099;
-    z-index: 100;
+.backdrop {
     position: fixed;
-    overflow: auto;
     top: 0;
     left: 0;
-    display: grid;
-    place-items: center;
+    width: 100%;
+    height: 100vh;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.75);
   }
   
   .modal {
-    width: 50%;
-    height: 50%;
+    position: fixed;
+    top: 20vh;
+    left: 5%;
+    width: 90%;
     background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    display: grid;
-    grid-template-rows: 1fr 10fr 1fr;
+    padding: 1rem;
+    border-radius: 14px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    z-index: 30;
+    animation: slide-down 300ms ease-out forwards;
   }
   
-  .modal_header {
-    display: flex;
-    justify-content: space-between;
+  @media (min-width: 768px) {
+    .modal {
+      width: 40rem;
+      left: calc(50% - 20rem);
+    }
+  }
+  
+  @keyframes slide-down {
+    from {
+      opacity: 0;
+      transform: translateY(-3rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
